# pomelo-udp-native

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PROTOCOL.md  README.md  TODO.md  plugin_notes.txt
docs/: API.md  CONNECT_TOKEN.md  DELIVERY.md  PACKETS.md  PLATFORM.md  PLUGIN.md  PROTOCOL.md  STANDARD.md
example/: client.c  sample.c  server.c  shared.c  shared.h
include/: pomelo.h
include/pomelo/: address.h  allocator.h  api.h  base64.h  common.h  constants.h  errno.h  platform.h  plugin.h  random.h  statistic.h  token.h  version.h
include/pomelo/statistic/: statistic-allocator.h  statistic-api.h  statistic-buffer.h  statistic-delivery.h  statistic-platform.h  statistic-protocol.h
src/adapter/: adapter.c  adapter.h  default.c  default.h
src/api/: channel.c  channel.h  context.c  context.h  message.c  message.h  session.c  session.h  socket.c  socket.h
src/api/builtin/: builtin.h  channel.c  channel.h  delivery.c  protocol.c  session.c  session.h
src/api/plugin/: channel.c  channel.h  executor.c  executor.h  loader.c  manager.c  manager.h  message.c  message.h  plugin.c  plugin.h  session.c  session.h  socket.c  socket.h  token.c  token.h
src/base/: address.c  allocator.c  allocator.h  buffer.c  buffer.h  constants.h  extra.h  packet.c  packet.h  payload.c  payload.h  pipeline.c  pipeline.h  ref.c  ref.h  rtt.c  sequencer.c  sequencer.h
src/codec/: checksum.c  checksum.h  codec.c  codec.h  packet.c  packet.h  token.c  token.h
src/crypto/: base64.c  checksum.c  checksum.h  crypto.c  crypto.h  random.c  token.c  token.h
src/delivery/: bus.c  bus.h  checksum.c  checksum.h  clock.c  clock.h  commands.c  commands.h  context.c  context.h  delivery.h  dispatcher.c  dispatcher.h  endpoint.c  endpoint.h  fragment.c  fragment.h  heartbeat.c  heartbeat.h  internal.h  parcel.c  parcel.h  receiver.c  receiver.h  sender.c  sender.h  transporter.c  transporter.h
src/generator/: args.c  args.h  generator.c
src/platform/: platform.h
src/platform/common/: platform-timer.c  platform-timer.h  platform-udp.c  platform-udp.h
src/platform/poll/: platform-poll.c  platform-poll.h  platform-task.c  platform-task.h
src/platform/uv/: executor.c  executor.h  glue.c  platform-task-deferred.c  platform-task-deferred.h  platform-task-group.c  platform-task-group.h  platform-task-main.c  platform-task-main.h  platform-task-worker.c  platform-task-worker.h  platform-uv.c  platform-uv.h  time.c  timer.c  timer.h  udp.c  udp.h  worker.c  worker.h
src/protocol/: adapter.c  adapter.h  client.c  client.h  clock.c  clock.h  context.c  context.h  crypto.c  crypto.h  emitter.c  emitter.h  packet.c  packet.h  pass.c  pass.h  peer.c  peer.h  protocol.h  receiver.c  receiver.h  sender.c  sender.h  server.c  server.h  socket.c  socket.h
src/utils/: args.h  array.c  array.h  atomic.c  heap.c  heap.h  list.c  list.h  macro.h  map.c  map.h  mutex.c  pool.c  pool.h  rtt.c  rtt.h
test/: TEST_STRUCTURE.md  pomelo-test.h
test/api-test/: api-basic-test.c  api-broadcast-test.c  api-test.c
test/base-test/: address-test.c  allocator-test.c  array-test.c  base-test.c  base-test.h  codec-test.c  list-test.c  map-test.c  payload-test.c  pool-test.c  ref-test.c  unrolled-list-test.c
test/crypto-test/: crypto-test.c
test/delivery-test/: delivery-test-multiple.c  delivery-test-single.c  delivery-test.c
test/platform-test/: platform-poll.c  platform-test.c  platform-test.h  platform-uv.c
test/plugin-test/: demo-plugin.c  plugin-test.c
test/protocol-test/: adapter-simulator.c  adapter-simulator.h  adapter-unencrypted.c  adapter-unencrypted.h  client-test.c  packet-test.c  protocol-test.c  server-test.c
test/statistic-check/: statistic-check.c  statistic-check.h
test/utils-test/: array-test.c  heap-test.c  list-test.c  map-test.c  pool-test.c  utils-test.c  utils-test.h
test/webrtc-plugin-test/: webrtc-plugin-test.c
